<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

    <Switch
        android:id="@+id/switch_disabled_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disabled_alert" />

    <Switch
        android:id="@+id/switch_disabled_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disabled_exit" />

    <TextView
        android:id="@+id/textv_main_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_descrip" />

</LinearLayout>
</LinearLayout>
